src/objects/Marketing_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Parking_Fee_Monthly__c</fullName>
        <label>Parking Fee (Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planning_Motion_Number__c</fullName>
        <description>From the Building, Planning Motion Number</description>
        <formula>Listing__r.Building__r.Planning_Motion_Number__c</formula>
        <inlineHelpText>From the Building, Planning Motion Number</inlineHelpText>
        <label>Planning Motion Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_End_Date__c</fullName>
        <label>Posting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Start_Date__c</fullName>
        <label>Posting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pref_Lenders_are_MOHCD_approved_for_BMR__c</fullName>
        <description>In order for your preferred lenders to provide loan preapprovals to BMR applicants, they must be approved by MOHCD. Are your preferred lenders currently listed on the list of MOHCD-approved BMR lenders at www.sfmohcd.org?</description>
        <inlineHelpText>In order for your preferred lenders to provide loan preapprovals to BMR applicants, they must be approved by MOHCD. Are your preferred lenders currently listed on the list of MOHCD-approved BMR lenders at www.sfmohcd.org?</inlineHelpText>
        <label>Pref. Lenders are MOHCD approved for BMR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 1: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Contact_Phone__c</fullName>
        <label>Preferred Lender 1: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_1_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 1: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 2: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Contact_Phone__c</fullName>
        <label>Preferred Lender 2: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_2_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 2: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Bank_Brokerage_Name__c</fullName>
        <label>Preferred Lender 3: Bank/Brokerage Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Contact_Phone__c</fullName>
        <label>Preferred Lender 3: Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Lender_3_Lending_Officer_Name__c</fullName>
        <label>Preferred Lender 3: Lending Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procedures_Manual_BMR_Ownership__c</fullName>
        <defaultValue>&quot;All potential buyers must review the 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual that governs this property. Buyers will sign an acknowledgement that they have read and understood this document when purchasing a BMR unit.&quot; &amp; BR()&amp; BR()&amp; 

&quot;The 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual can be found here: http://sf-moh.org/index.aspx?page=295&quot;</defaultValue>
        <label>Procedures Manual (BMR Ownership)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedures_Manual_BMR_Rental__c</fullName>
        <defaultValue>&quot;All BMR renters must review and acknowledge the Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013 that governs this property upon the signing of a lease for a BMR unit.&quot; &amp; BR()&amp; BR()&amp; 

&quot;The 2013 Inclusionary Affordable Housing Program Monitoring and Procedures Manual can be found here: http://sf-moh.org/index.aspx?page=295&quot;</defaultValue>
        <label>Procedures Manual (BMR Rental)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Marketing_Launch_Date__c</fullName>
        <inlineHelpText>This is the date the posting will start to appear on the MOHCD website.</inlineHelpText>
        <label>Proposed Marketing Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_History_Standard__c</fullName>
        <label>Rental History Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Representative_Signature__c</fullName>
        <description>Please type your name in field to confirm you completed form.</description>
        <inlineHelpText>Please type your name in field to confirm you completed form.</inlineHelpText>
        <label>Representative Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Range_if_more_than_1_unit__c</fullName>
        <label>Sales Price Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_you_ll_take_to_ensure_FNMA_appoval__c</fullName>
        <label>Steps you&apos;ll take to ensure FNMA appoval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_for_MKTG_to_Neighborhood__c</fullName>
        <description>I/We understand we must present a strategy for reaching out to the local community surrounding the building. (Suggestions include posting flyers in local community meeting places, posting the units in local papers, and reaching out to local community groups. This strategy is above and beyond your ad placements. At a minimum, list 10 local venues in which you will post your flyer or otherwise distribute your flyer.)</description>
        <inlineHelpText>Strategy for Marketing to Residents of the Local neighborhood.</inlineHelpText>
        <label>Strategy for MKTG to Neighborhood</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Unit__c</fullName>
        <defaultValue>&quot;City Second Loan Program with Right of First Refusal&quot;</defaultValue>
        <label>Type of Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_for_the_Ad_for_the_Property__c</fullName>
        <label>URL for the Ad for the Property</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_the_HOA_Dues_cover__c</fullName>
        <label>What the HOA Dues cover?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_you_have_preferred_lenders__c</fullName>
        <description>Will you have preferred Lenders for this building?</description>
        <inlineHelpText>Will you have preferred Lenders for this building?</inlineHelpText>
        <label>Will you have preferred lenders?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <description>From the Building, year built.</description>
        <formula>Text(Listing__r.Year_Built__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Building, year built.</inlineHelpText>
        <label>Year Built</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Proposed_Ad_Language_Here__c</fullName>
        <description>Proposed Language for the Advertising.</description>
        <label>Your Proposed Ad Language Here:</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms_Range_if_more_than_1_unit__c</fullName>
        <label># of Bathrooms Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms_Range_if_more_than_1_unit__c</fullName>
        <label># of Bedrooms Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Plan</label>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>First_Supe_Office_Date</fullName>
        <active>true</active>
        <description>The Date of Supervisor Annoucement must be in the 3 weeks after launch date.</description>
        <errorConditionFormula>(Proposed_Marketing_Launch_Date__c   &gt;=  Date_1_Supe_Office_Announcement__c)  ||   (Date_1_Supe_Office_Announcement__c  &gt;=  Proposed_Marketing_Launch_Date__c + 21)</errorConditionFormula>
        <errorDisplayField>Date_1_Supe_Office_Announcement__c</errorDisplayField>
        <errorMessage>The First Announcement in the Board of Supervisors Office must be within 21 days of the Marketing Launch Date and After the Marketing Launch Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_std_users_can_edit_approved_mktg</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL($Profile.UserType, &apos;Standard&apos;)) &amp;&amp; ISPICKVAL(Status__c, &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>Only MOHCD staff can edit approved marketing plans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Second_Supe_Office_Date</fullName>
        <active>true</active>
        <description>The Date of Supervisor Annoucement must be in the 3 weeks after launch date.</description>
        <errorConditionFormula>(Proposed_Marketing_Launch_Date__c   &gt;=  Date_2_Supe_Office_Announcement__c)  ||   (Date_2_Supe_Office_Announcement__c  &gt;=  Proposed_Marketing_Launch_Date__c + 21)  || (Date_1_Supe_Office_Announcement__c = Date_2_Supe_Office_Announcement__c)</errorConditionFormula>
        <errorDisplayField>Date_2_Supe_Office_Announcement__c</errorDisplayField>
        <errorMessage>The Second Announcement in the Board of Supervisors Office must be within 21 days of the Marketing Launch Date and After the Marketing Launch Date. It also must not be the same as the First Announcement Date</errorMessage>
    </validationRules>
</CustomObject>